apps/portfolio-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-api
  namespace: portfolio
spec:
  replicas: 2

  selector:
    matchLabels:
      app: portfolio-api

  template:
    metadata:
      labels:
        app: portfolio-api

    spec:
      containers:

      - name: portfolio-api

        image: philiphabib/portfolio-api:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 8000

        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15

        resources:
          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 500m
            memory: 512Mi
