apps/portfolio-api/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: portfolio-api
  namespace: portfolio

spec:

  selector:
    app: portfolio-api

  ports:
  - port: 80
    targetPort: 8000

  type: ClusterIP
