apps/portfolio-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: portfolio-api
  namespace: portfolio

spec:

  ingressClassName: nginx

  rules:

  - host: api.lab.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: portfolio-api

            port:

              number: 80
